# vfxs

./: .env  .gitignore  README.md  pyproject.toml  start.sh  start_server.sh
deploy/: gunicorn.conf.py  supervisord.conf
src/vfxs/: __init__.py  aly.md  asgi.py  config.py  main.py
src/vfxs/apps/v1/: __init__.py  views.py
src/vfxs/crontab/: extensions.py  jobs.py  main.py
src/vfxs/models/: __init__.py  database.py  tables.py
src/vfxs/repeated/: extensions.py
src/vfxs/repeated/jobs/: clear_expire_asset.py
src/vfxs/server/: __init__.py
src/vfxs/utils/: cos.py  enums.py  logger.py  request.py  response.py  wrapper.py
src/vfxs/vfx/: __init__.py  base.py  vfx.py
tests/: a.py  nb.py  test_api.py  test_curd.py
